added join meet feature

--- a/client/src/components/UI/Button/Button.module.css
+++ b/client/src/components/UI/Button/Button.module.css
@@ -1,7 +1,7 @@
 .Btn {
   width: 120px;
   color: black;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 4px;
   margin-left: 10px;
   height: 40px;
